# wallpapr-cli

./: .gitignore  CMakeLists.txt  README.md  papr.cpp
